# taliebot

./: README.md  pyproject.toml
taliebot/: bot.py  talies_tweets.csv  tweet_generator.py
